syntax = "proto3";

package com.example.internalapi.request.reservation.find_all_by_user_id.proto;

option java_multiple_files = true;

import "com/example/internalapi/model/reservation.proto";

message FindAllReservationsByUserIdRequest {
  string user_id = 1;
}

message FindAllReservationsByUserIdResponse {
  oneof response {
    Success success = 1;
  }

  message Success {
    example.internalapi.model.ReservationList reservations = 1;
  }
}
