syntax = "proto3";

package com.example.internalapi;

import "com/example/internalapi/input/reqreply/reservation/find_all_by_user_id.proto";

service FindAllReservationsByUserIdService {
  rpc findAllReservationByUserId(com.example.internalapi.request.reservation.find_all_by_user_id.proto.FindAllReservationsByUserIdRequest)
      returns (com.example.internalapi.request.reservation.find_all_by_user_id.proto.FindAllReservationsByUserIdResponse);
}
